Some more fixes to make it usable